[REFACTOR] Fix code smells